--- a/stunning.html
+++ b/stunning.html
@@ -158,7 +158,7 @@
 <body>
     <header>
         <div id="header-image">
-            <img src="./images/stunning-logo.png" alt="">
+            <img src="./images/stunning-logo.png" alt="Logo">
         </div>
         <div id="nav-item">
             <span>Home</span>
@@ -182,36 +182,36 @@
                         done. </p>
                     <div id="arrow">
                         <button>New Account</button>
-                        <img src="./images/arrow-up.png" alt="arrow-up" width="50px" height="30px">
-                        <img src="./images/arrow-down.png" alt="arrow-down" width="50px" height="30px">
+                        <img src="./images/arrow-up.png" alt="up" width="50px" height="30px">
+                        <img src="./images/arrow-down.png" alt="down" width="50px" height="30px">
                     </div>
                 </div>
                 <div id="list">
                     <div class="list-item">
                         <img src="./images/tick-gray.png" alt="tick">
                         <p>Dmm design</p>
-                        <img style="margin-left: 62px;" src="./images/user-pink.png" alt="">
+                        <img style="margin-left: 62px;" src="./images/user-pink.png" alt="user">
                         <p>20 Dec</p>
                     </div>
 
                     <div class="list-item">
                         <img src="./images/tick-blue.png" alt="tick">
                         <p>Blurr animation</p>
-                        <img style="margin-left: 40px;" src="./images/user-orange.png" alt="">
+                        <img style="margin-left: 40px;" src="./images/user-orange.png" alt="user">
                         <p>22 Dec</p>
                     </div>
 
                     <div class="list-item">
                         <img src="./images/tick-gray.png" alt="tick">
                         <p>Illustration</p>
-                        <img style="margin-left: 70px;" src="./images/user-blue.png" alt="">
+                        <img style="margin-left: 70px;" src="./images/user-blue.png" alt="user">
                         <p>26 Dec</p>
                     </div>
 
                     <div class="list-item">
                         <img src="./images/tick-gray.png" alt="tick">
                         <p>Refund</p>
-                        <img style="margin-left: 90px;" src="./images/user-red.png" alt="">
+                        <img style="margin-left: 90px;" src="./images/user-red.png" alt="user">
                         <p>28 Dec</p>
                     </div>
 
